<resources>
    <string name="app_name">BackToBasics</string>

    <!-- Valores para el login -->
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>

    <!-- Valores para el registrarse -->
    <string name="Name">Name</string>
    <string name="Enrollment">Enrollment</string>
    <string name="Telephone">Telephone</string>
    <string name="Career">Career</string>

    <!-- Bottom Nav -->
    <string name="nav_home">Home</string>
    <string name="nav_btb">BTB</string>
    <string name="nav_favorite">Favorites</string>
    <string name="nav_msgs">Messages</string>
</resources>
